adds burger menu to nav bar on window shrink

--- a/code-bar-job-board-app/src/components/App/App.css
+++ b/code-bar-job-board-app/src/components/App/App.css
@@ -2,11 +2,30 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    padding-top: 100px
 }
 
 .bold {
     font-weight: bold;
 }
+
+/* Header */
+
+header {
+    margin:15px;
+}
+
+#header-logo {
+    width: 148px;
+    height: 40px;
+}
+
+.nav-link {
+    color: grey;
+    font-weight: bold;
+}
+
+
 
 /* Job summary page */
 
