adds styling for single jobs page

--- a/code-bar-job-board-app/src/components/App/App.css
+++ b/code-bar-job-board-app/src/components/App/App.css
@@ -45,7 +45,38 @@ header {
     max-width: 100%;
 }
 
+/* Job Main Page */
 
+.job-page-main {
+    padding-right: 100px;
+}
+
+.job-page-side-bar {
+    border-color: grey;
+    border-width: 1px;
+    border-radius: 1%;
+    border-style: solid;
+    display: flex;
+    flex-direction: column;
+    padding:20px;
+    margin-bottom: 10px;
+    max-width: 30%;
+    height: 100%;
+}
+
+.job-page-side-bar-item {
+    padding: 10px;
+}
+
+.job-page-side-bar-item p {
+    margin: 0px;
+}
+
+.apply-link {
+    color: white;
+    text-decoration: none;
+    
+}
 
 /* Footer */
  footer {
