--- a/code-bar-job-board-app/src/components/App/App.css
+++ b/code-bar-job-board-app/src/components/App/App.css
@@ -52,9 +52,9 @@ header {
 
 /* Job Main Page */
 
-.job-page-main {
+/* .job-page-main {
     padding-right: 100px;
-}
+} */
 
 .job-page-side-bar {
     border-color: grey;
@@ -65,7 +65,6 @@ header {
     flex-direction: column;
     padding:20px;
     margin-bottom: 10px;
-    max-width: 30%;
     height: 100%;
 }
 
