--- a/code-bar-job-board-app/src/components/App/App.css
+++ b/code-bar-job-board-app/src/components/App/App.css
@@ -50,11 +50,15 @@ header {
     max-width: 100%;
 }
 
+/* Job post page */
+
+.job-post-details-section {
+    padding-top: 20px;
+}
+
 /* Job Main Page */
 
-/* .job-page-main {
-    padding-right: 100px;
-} */
+
 
 .job-page-side-bar {
     border-color: grey;
